Prepare name resolution as source and target
