# swagger.yaml
@@ -247,6 +247,126 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/simpleError'
+  /smiles/to/names:
+    get:
+      summary: Converts from a SMILES format to a list of known names
+      description: >
+        Converts from a SMILES format into chemical names. The conversion is
+        performed by using an external webservice and has relatively high latency.
+      tags:
+        - SMILES
+        - NAMES
+      parameters:
+        - $ref: "#/parameters/smiles"
+      responses:
+        200:
+          $ref: "#/responses/names"
+        400:
+          description: Invalid request (typically a mandatory parameter was missing or malformed)
+          schema:
+            $ref: '#/definitions/simpleError'
+        500:
+          description: Error in conversion by external webservice
+          schema:
+            $ref: '#/definitions/simpleError'
+        504:
+          description: Upstream service timeout
+          schema:
+            $ref: '#/definitions/simpleError'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/simpleError'
+  /cas/to/names:
+    get:
+      summary: Converts from a CAS number to a list of known names
+      description: >
+        Converts from a CAS number into chemical names. The conversion is
+        performed by using an external webservice and has relatively high latency.
+      tags:
+        - CAS
+        - NAMES
+      parameters:
+        - $ref: "#/parameters/cas"
+      responses:
+        200:
+          $ref: "#/responses/names"
+        400:
+          description: Invalid request (typically a mandatory parameter was missing or malformed)
+          schema:
+            $ref: '#/definitions/simpleError'
+        500:
+          description: Error in conversion by external webservice
+          schema:
+            $ref: '#/definitions/simpleError'
+        504:
+          description: Upstream service timeout
+          schema:
+            $ref: '#/definitions/simpleError'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/simpleError'
+  /inchi/to/names:
+    get:
+      summary: Converts from a InChI format to a list of known names
+      description: >
+        Converts from a InChI format into chemical names. The conversion is
+        performed by using an external webservice and has relatively high latency.
+      tags:
+        - INCHI
+        - NAMES
+      parameters:
+        - $ref: "#/parameters/inchi"
+      responses:
+        200:
+          $ref: "#/responses/names"
+        400:
+          description: Invalid request (typically a mandatory parameter was missing or malformed)
+          schema:
+            $ref: '#/definitions/simpleError'
+        500:
+          description: Error in conversion by external webservice
+          schema:
+            $ref: '#/definitions/simpleError'
+        504:
+          description: Upstream service timeout
+          schema:
+            $ref: '#/definitions/simpleError'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/simpleError'
+  /inchikey/to/names:
+    get:
+      summary: Converts from an InChIKey format to a list of known names
+      description: >
+        Converts from a InChIKey format into chemical names. The conversion is
+        performed by using an external webservice and has relatively high latency.
+      tags:
+        - INCHIKEY
+        - NAMES
+      parameters:
+        - $ref: "#/parameters/inchikey"
+      responses:
+        200:
+          $ref: "#/responses/names"
+        400:
+          description: Invalid request (typically a mandatory parameter was missing or malformed)
+          schema:
+            $ref: '#/definitions/simpleError'
+        500:
+          description: Error in conversion by external webservice
+          schema:
+            $ref: '#/definitions/simpleError'
+        504:
+          description: Upstream service timeout
+          schema:
+            $ref: '#/definitions/simpleError'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/simpleError'
   /cas/to/smiles:
     get:
       summary: Converts from a CAS number into (canonical) SMILES format
@@ -402,6 +522,130 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/simpleError'
+  /name/to/inchikey:
+    get:
+      summary: Converts from a compound name into InChIKey format
+      description: >
+        Converts from a compound name into InChIKey. Only a single match is
+        returned if there is an ambiguity in the conversion. The conversion is
+        performed by using an external webservice and has relatively high latency.
+      tags:
+        - NAME
+        - InChIKey
+      parameters:
+        - $ref: "#/parameters/name"
+      responses:
+        200:
+          $ref: "#/responses/inchikey"
+        400:
+          description: Invalid request (typically a mandatory parameter was missing or malformed)
+          schema:
+            $ref: '#/definitions/simpleError'
+        500:
+          description: Error in conversion by external webservice
+          schema:
+            $ref: '#/definitions/simpleError'
+        504:
+          description: Upstream service timeout
+          schema:
+            $ref: '#/definitions/simpleError'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/simpleError'
+  /name/to/inchi:
+    get:
+      summary: Converts from a compound name into InChI format
+      description: >
+        Converts from a compound name into InChI. Only a single match is
+        returned if there is an ambiguity in the conversion. The conversion is
+        performed by using an external webservice and has relatively high latency.
+      tags:
+        - NAME
+        - InChI
+      parameters:
+        - $ref: "#/parameters/name"
+      responses:
+        200:
+          $ref: "#/responses/inchi"
+        400:
+          description: Invalid request (typically a mandatory parameter was missing or malformed)
+          schema:
+            $ref: '#/definitions/simpleError'
+        500:
+          description: Error in conversion by external webservice
+          schema:
+            $ref: '#/definitions/simpleError'
+        504:
+          description: Upstream service timeout
+          schema:
+            $ref: '#/definitions/simpleError'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/simpleError'
+  /name/to/smiles:
+    get:
+      summary: Converts from a compound name into Smiles format
+      description: >
+        Converts from a compound name into Smiles. Only a single match is
+        returned if there is an ambiguity in the conversion. The conversion is
+        performed by using an external webservice and has relatively high latency.
+      tags:
+        - NAME
+        - SMILES
+      parameters:
+        - $ref: "#/parameters/name"
+      responses:
+        200:
+          $ref: "#/responses/smiles"
+        400:
+          description: Invalid request (typically a mandatory parameter was missing or malformed)
+          schema:
+            $ref: '#/definitions/simpleError'
+        500:
+          description: Error in conversion by external webservice
+          schema:
+            $ref: '#/definitions/simpleError'
+        504:
+          description: Upstream service timeout
+          schema:
+            $ref: '#/definitions/simpleError'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/simpleError'
+  /name/to/cas:
+    get:
+      summary: Converts from a compound name into CAS number
+      description: >
+        Converts from a compound name into CAS number. Only a single match is
+        returned if there is an ambiguity in the conversion. The conversion is
+        performed by using an external webservice and has relatively high latency.
+      tags:
+        - NAME
+        - CAS
+      parameters:
+        - $ref: "#/parameters/name"
+      responses:
+        200:
+          $ref: "#/responses/cas"
+        400:
+          description: Invalid request (typically a mandatory parameter was missing or malformed)
+          schema:
+            $ref: '#/definitions/simpleError'
+        500:
+          description: Error in conversion by external webservice
+          schema:
+            $ref: '#/definitions/simpleError'
+        504:
+          description: Upstream service timeout
+          schema:
+            $ref: '#/definitions/simpleError'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/simpleError'
 parameters:
   smiles:
     name: smiles
@@ -410,28 +654,30 @@ parameters:
     format: smiles
     description: Compound structure notated using SMILES notation
     required: true
-    x-ontology: http://edamontology.org/format_1196
   inchi:
     name: inchi
     in: query
     type: string
     description: Compound structure notated using InChI notation
     required: true
-    x-ontology: http://edamontology.org/format_1197
   inchikey:
     name: inchikey
     in: query
     type: string
     description: Compound structure notated using InChIKey notation
     required: true
-    x-ontology: http://edamontology.org/format_1199
   cas:
     name: cas
     in: query
     type: string
     description: Compound structure notated as a CAS number (3 groups of numbers separated by dashes)
     required: true
-    x-ontology: http://edamontology.org/data_3102
+  name:
+    name: name
+    in: query
+    type: string
+    description: Compound structure notated as a CAS number (3 groups of numbers separated by dashes)
+    required: true
 responses:
   inchi:
     description: The converted InChI string
@@ -441,7 +687,6 @@ responses:
         inchi:
           type: string
           description: Compound structure notated using InChI notation
-          x-ontology: http://edamontology.org/format_1197
   smiles:
     description: The converted SMILES string
     schema:
@@ -450,7 +695,6 @@ responses:
         smiles:
           type: string
           description: Compound structure notated using (canonical) SMILES notation
-          x-ontology: http://edamontology.org/format_1196
   inchikey:
     description: The converted InChIKey string
     schema:
@@ -459,7 +703,6 @@ responses:
         inchikey:
           type: string
           description: Compound structure notated using InChIKey
-          x-ontology: http://edamontology.org/format_1199
   cas:
     description: The converted CAS number (3 groups of numbers separated by dashes)
     schema:
@@ -468,7 +711,14 @@ responses:
         cas:
           type: string
           description: Compound structure notated using a CAS number
-          x-ontology: http://edamontology.org/data_3102
+  names:
+    description: The converted chemical names (trivial names, synonyms, systematic names, registry numbers, ...)
+    schema:
+      type: object
+      properties:
+        names:
+          type: string
+          description: Compound structure notated using a CAS number
   molWeight:
     description: The molecular weight (caluclated with rdkit)
     schema:
@@ -477,7 +727,6 @@ responses:
         smiles:
           type: string
           description: Compound structure notated using (canonical) SMILES notation
-          x-ontology: http://edamontology.org/format_1196
         molWeight:
           type: number
           description: The molecular weight (caluclated with rdkit)
